# Downloads-Organizer

./: Cargo.toml  README.md  download_rules.example.json
.github/workflows/: build.yml  release.yml  test.yml
src/: main.rs
