[package]
name = "download_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.28"
notify = "5.0"
dirs = "4.0"
chrono = "0.4"
notify-rust = "4.5"
zip = { version = "2.2.2", features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"


[[bin]]
name = "downloadManager"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
